LEXEVS-3494. First round of cleanup/refactor