@@ -13,4 +13,4 @@ REM
 REM
 REM Example: BuildAssertedValueSetIndex -u "urn:oid:2.16.840.1.113883.3.26.1.1" -v "05.09e"
 REM
-java -Xmx800m -XX:PermSize=256m -cp "..\runtime\lbPatch.jar;..\runtime-components\extLib\*" org.LexGrid.LexBIG.admin.BuildAssertedValueSetIndex %*
+java -Xmx2000m -cp "..\runtime\lbPatch.jar;..\runtime-components\extLib\*" org.LexGrid.LexBIG.admin.BuildAssertedValueSetIndex %*
